--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 .slider h3,
 .slider h5,
-.client h1 {
+.quotes h1 {
     text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
 }
 
@@ -16,5 +16,5 @@
 
 section,
 footer {
-    padding: 20px 0;
+    padding: 30px 0;
 }
